@@ -10,6 +10,7 @@ Version 1.5.6+svn:
      first story screens in Descent into Darkness and Under the Burning Suns).
    * Tweaked the algorithm that extends the darkened area below long
      story texts so that it gives a more consistent appearance.
+   * Added a border and blurring to story screens' text blocks.
 
 Version 1.5.6:
  * Authoring tools:
